[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/components/TeamLabel.gd" type="Script" id=1]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://themes/large_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://shaders/panel_shader.tres" type="Material" id=4]
[ext_resource path="res://themes/panel_styleboxflat.tres" type="StyleBox" id=5]

[node name="TeamLabel" type="PanelContainer"]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -195.5
margin_top = -57.0
margin_right = -1724.5
margin_bottom = -1023.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 410.0
margin_bottom = 160.0
rect_min_size = Vector2( 410, 160 )
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 250.0
margin_bottom = 160.0
rect_min_size = Vector2( 250, 100 )
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TEAM 
NAME"
align = 1
valign = 1
autowrap = true
uppercase = true
max_lines_visible = 4

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 254.0
margin_right = 404.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 100 )
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 1
valign = 1

[node name="ScoreChangeTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="gui_input" from="." to="." method="_on_TeamLabel_gui_input"]
[connection signal="timeout" from="ScoreChangeTimer" to="." method="_on_ScoreChangeTimer_timeout"]
